--- a/package.json
+++ b/package.json
@@ -39,20 +39,23 @@
     "passport-github2": "^0.1.9",
     "passport-google-oauth": "^0.2.0",
     "passport-twitter": "^1.0.3",
-    "react": "^0.13.3",
+    "react": "^0.14.0",
+    "react-addons-css-transition-group": "^0.14.0",
+    "react-dom": "^0.14.0",
     "reactify": "^1.1.1",
-    "socket.io": "1.3.6",
-    "socket.io-client": "*",
-    "shriek-markdown": "^0.2.2",
     "shriek-emoji": "^1.0.3",
+    "shriek-markdown": "^0.2.2",
     "shriek-opengraph": "^0.1.4",
     "shriek-webrtc": "^0.1.3",
+    "socket.io": "1.3.6",
+    "socket.io-client": "*",
     "transliteration": "^0.1.1",
     "vinyl-fs": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "wiredep": "^3.0.0-beta"
   },
   "devDependencies": {
+    "browserify-resolutions": "^1.0.6",
     "ghooks": "^0.3.2"
   },
   "config": {
